--- a/practice/css/base.css
+++ b/practice/css/base.css
@@ -16,7 +16,7 @@ h1 {
     font-size: 1rem;
     font-weight: 400;
     margin-top: 5%;
-    margin-bottom: 3%;
+    margin-bottom: 1%;
     text-align: center;
     color: var(--light);
 }
@@ -25,19 +25,16 @@ h2 {
     font-size: 4rem;
     font-weight: 800;
     margin-top: 3%;
-    margin-bottom: 2%;
-    margin-top: 10%;
     color: var(--primary);
 }
 
 h3 {
     font-size: 2.0rem;
     margin-top:2%;
-    margin-bottom: 50%;
 }
 
 h4 {
-    font-size: 1.25rem;
+    font-size: 0.5rem;
     font-weight: 600;
     margin-top: 1%;
     margin-bottom: 1%;
@@ -56,12 +53,17 @@ nav{
 
 img {
     border-radius: 8px;
+    margin-top: 2%;
 }
 
 nav a {
     color: var(--light);
-    padding-left: 1%;
-    padding-right: 1%;
+    margin-left: 2%;
+    margin-right: 1%;
+}
+
+a:hover {
+    color: #99FF00 ;
 }
 
 h1 a {
