--- a/practice/css/base.css
+++ b/practice/css/base.css
@@ -13,8 +13,8 @@ body {
 }
 
 h1 {
-    font-size: 1rem;
-    font-weight: 400;
+    font-size: 2rem;
+    font-weight: 600;
     margin-top: 5%;
     margin-bottom: 1%;
     text-align: center;
@@ -60,6 +60,7 @@ nav a {
     color: var(--light);
     margin-left: 2%;
     margin-right: 1%;
+    text-decoration: none;
 }
 
 a:hover {
@@ -68,4 +69,5 @@ a:hover {
 
 h1 a {
     color: var(--light);
+    text-decoration: none;
 }
