--- a/practice/css/components.css
+++ b/practice/css/components.css
@@ -11,3 +11,20 @@
 .btn-primary {
     background-color: var(--primary);
 }
+
+/*
+    photo gallery
+*/
+
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 10px;
+}
+
+
+.gallery-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
