Updated Community page
Added slideshow and started on form element for discussion board

--- a/assessment/css/layout.css
+++ b/assessment/css/layout.css
@@ -22,7 +22,7 @@
 }
 
 
-#gridcontainer {
+#navigation-bar {
   display: grid; /* turn this element into a grid container */
   height: 100vh; /* make the grid container take up 100% ofthe window height */
 
