--- a/assessment/css/base.css
+++ b/assessment/css/base.css
@@ -135,6 +135,10 @@ header {
 
 /* Main and footer areas */
 main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
   grid-area: main;
 }
 
@@ -284,16 +288,49 @@ button:after{
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 70%;
+}
+
+.discussion-form, .posts {
+  width: 70%;
+  margin: 20px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.discussion-form h2 {
+  margin: 0;
+  text-align: center;
   margin-bottom: 20px;
 }
 
-textarea {
+#postForm {
+  display: flex;
+  align-items: center;
   width: 100%;
-  height: 100px;
+}
+
+textarea {
+  width: 100vh;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
   resize: none;
+  box-sizing: border-box;
+  margin-right: 10px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.discussion-form button {
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
 }
 
 .posts {
@@ -302,8 +339,7 @@ textarea {
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   margin: 20px auto;
-  max-width: 1200px;
-  width: 100%;
+  width: 70%;
 }
 
 .post {
@@ -359,6 +395,7 @@ textarea {
   color: black; /* Set text color */
   margin-top: 10px; /* Add space above the text */
   margin-left: 60px; /*The text of the post */
+  width: 100%;
 }
 
 .like-button {
