Safety Guides Page
Added HTML and CSS for the list of guides on the safety guides page

--- a/assessment/css/base.css
+++ b/assessment/css/base.css
@@ -15,7 +15,7 @@
   --text-color: #333333;      /* Main text color */
   --background-color: #FFFFFF; /* Background color */
   --link-color: #6412EA;      /* Color for links */
-  --hover-color: #B7BFED;     /* Hover color for buttons/links */
+  --hover-color: #FD6A17;     /* Hover color for buttons/links */
   --border-color: #CCCCCC;     /* Border color */
 }
 
